--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
+  <link rel="stylesheet" type="text/css" href="main.css">
   <title>YouTube Search</title>
 </head>
 <body>
@@ -18,5 +19,6 @@
   </div>
   
   <script src="https://code.jquery.com/jquery-3.1.0.js"></script>
+  <script type="text/javascript" src="app-1.js"></script>
 </body>
 </html>
