--- a/index.html
+++ b/index.html
@@ -19,6 +19,6 @@
   </div>
   
   <script src="https://code.jquery.com/jquery-3.1.0.js"></script>
-  <script type="text/javascript" src="app-1.js"></script>
+  <script type="text/javascript" src="app.js"></script>
 </body>
 </html>
